5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1667_2322.log
== TEST (2019-04-16 16:10:48) 
-- CODE:
var1 = input("LUNA")
V = esp/temp
 if(bruxo=="LUNA"):
	esp=7.674
	temp=3.789
	print (V)
 
 else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
File "XXXX", line 3
    if(bruxo=="LUNA"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:00) 
-- CODE:
var1 = input("LUNA")
V = esp/temp
 if(bruxo=="LUNA"):
	esp=7.674
	temp=3.789
	print (V)
 
 else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
File "XXXX", line 3
    if(bruxo=="LUNA"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:07) 
-- CODE:
var1 = input("LUNA")
V = esp/temp
 if(bruxo=="LUNA"):
	esp=7.674
	temp=3.789
	print (V)
 
 else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
File "XXXX", line 3
    if(bruxo=="LUNA"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:06) 
-- CODE:
var1 = input("LUNA")
V = esp/temp
 if(bruxo=="LUNA"):
	a = esp / temp
	esp=7.674
	temp=3.789
	print (V)
 
 else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
File "XXXX", line 3
    if(bruxo=="LUNA"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:07) 
-- CODE:
var1 = input("NEVILLE")
V = esp/temp
 if(bruxo=="NEVILLE"):
	a = esp / temp
	esp=15.7654
	temp=1.3479
	print (V)
 
 else:
	esp=15.7654
	temp=1.3479
	print(esp/temp)
-- ERROR:
File "XXXX", line 3
    if(bruxo=="NEVILLE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:54) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
V = esp/temp
 if(bruxo=="NEVILLE"):
	a = esp / temp
	esp=15.7654
	temp=1.3479
	print (V)
 
 else:
	esp=15.7654
	temp=1.3479
	print(esp/temp)
-- ERROR:
File "XXXX", line 3
    if(bruxo=="NEVILLE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:24) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
V = esp/temp
 if(bruxo=="NEVILLE"):
	a = esp / temp
	esp=15.7654
	temp=1.3479
	print (V)
 
 else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
File "XXXX", line 3
    if(bruxo=="NEVILLE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:07) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
V = esp/temp
 if(bruxo=="NEVILLE"):
	a = esp / temp
	esp=15.7654
	temp=1.3479
	print(V)
 
 else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
File "XXXX", line 3
    if(bruxo=="NEVILLE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:00) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
V = esp/temp
 if(var1=="NEVILLE"):
	a = esp / temp
	esp=15.7654
	temp=1.3479
	print(V)
 
 else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
File "XXXX", line 3
    if(var1=="NEVILLE"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:37) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
V = esp/temp
if(var1=="NEVILLE"):
	a = esp / temp
	esp=15.7654
	temp=1.3479
	print(V)
 
 else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
File "XXXX", line 9
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:45) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
V = esp/temp
if(var1=="NEVILLE"):
	a = esp / temp
	esp=15.7654
	temp=1.3479
	print(V)
 
else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    V = esp/temp
NameError: name 'esp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:39) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
V = esp/temp

if(var1=="NEVILLE"):
	esp=15.7654
	temp=1.3479
	print(V)
 
else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    V = esp/temp
NameError: name 'esp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:58) 
-- CODE:
var1 = input("NEVILLE,LUNA:")

if(var1=="NEVILLE"):
	esp=15.7654
	temp=1.3479
	print(V)
 
else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(V)
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:56) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
 V esp/temp
if(var1=="NEVILLE"):
	esp=15.7654
	temp=1.3479
	print(V)
 
else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
File "XXXX", line 2
    V esp/temp
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:06) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
 
if(var1=="NEVILLE"):
	esp=15.7654
	temp=1.3479
	print(V)
 
else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(V)
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:37) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
 
if(var1=="NEVILLE"):
	esp=15.7654
	temp=1.3479
	print(esp/temp)
 
else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:21:51) 
-- CODE:
var1 = input("NEVILLE,LUNA:")
 
if(var1=="NEVILLE"):
	esp=15.7654
	temp=1.3479
	print(esp/temp)
 
else:
	esp=7.674
	temp=3.789
	print(esp/temp)
-- EXECUTION TIME:
0.232133
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
